# gecko

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/debugger/: Cargo.toml
crates/debugger/src/: debugger.rs  main.rs  render.rs  windows.rs
crates/debugger/src/windows/: controls.rs  cpu.rs  dsp.rs  gx.rs
crates/gecko/: Cargo.toml  build.rs  chipi.toml  dsp.bindings.chipi  gekko.bindings.chipi  gekko_jit.bindings.chipi  wii_gekko_jit.bindings.chipi
crates/gecko/spec/: gekko_jit.bindings.chipi  wii_gekko_jit.bindings.chipi
crates/gecko/src/: audio.rs  common.rs  cpu.rs  dvd.rs  gamecube.rs  hollywood.rs  hooks.rs  host.rs  idle.rs  input.rs  ipl.rs  jit_cache.rs  lib.rs  mmio.rs  profile.rs  scheduler.rs  scripting.rs  starlet.rs  system.rs  wii.rs
crates/gecko/src/cpu/: condition.rs  dec.rs  interpreter.rs  irq.rs  spr.rs
crates/gecko/src/cpu/interpreter/: alu.rs  branch.rs  compare.rs  cr_ops.rs  fp_ops.rs  ps_ops.rs  psq.rs  rotate.rs  store_load.rs  stubs.rs  system.rs
crates/gecko/src/dvd/: regs.rs
crates/gecko/src/flipper/: ai.rs  cp.rs  dsp.rs  exi.rs  gx.rs  pe.rs  pi.rs  si.rs  vi.rs
crates/gecko/src/flipper/ai/: regs.rs
crates/gecko/src/flipper/cp/: regs.rs
crates/gecko/src/flipper/dsp/: addr.rs  core.rs  instruction.rs  interpreter.rs  jit.rs  regs.rs
crates/gecko/src/flipper/exi/: device.rs  regs.rs
crates/gecko/src/flipper/gx/: bp.rs  draw.rs  fifo.rs  lighting.rs  regs.rs  tev.rs  texgen.rs  texture.rs  vertex.rs  xf.rs
crates/gecko/src/flipper/mi/: regs.rs
crates/gecko/src/flipper/pe/: regs.rs
crates/gecko/src/flipper/pi/: regs.rs
crates/gecko/src/flipper/si/: regs.rs
crates/gecko/src/flipper/vi/: regs.rs
crates/gecko/src/gekko/: interpreter.rs  jit.rs
crates/gecko/src/gekko/interpreter/: alu.rs  branch.rs  compare.rs  fp_ops.rs  store_load.rs  system.rs
crates/gecko/src/gekko/jit/: abi.rs  block.rs  handlers.rs  idle.rs  runtime.rs  translator.rs
crates/gecko/src/hollywood/: compat.rs  gpio.rs  ipc.rs  irq.rs  regs.rs
crates/gecko/src/mmio/: bus.rs  constants.rs  fp.rs  macros.rs  traits.rs
crates/tinyapp/: Cargo.toml
crates/tinyapp/src/: app.rs  audio.rs  main.rs  thread.rs
(+148 files in other folders)
