[package]
name = "gecko"
version = "0.1.0"
edition = "2024"

[features]
scripting = []
scripting-mut-traps = ["scripting"]

[build-dependencies]
chipi-build = "0.7.2"

[dependencies]
chapa = "0.1.0"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
image = { path = "../image" }
